# Mysite-shopapp

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
mysite/: demo.py  shopapp-fixtures.json
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_author_alter_article_category_and_more.py  0003_alter_article_pub_date.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html
mysite/locales/en/LC_MESSAGES/: django.po
mysite/locales/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_user.py
mysite/myauth/templates/myauth/: about-me.html  profile_form.html  profiles-list.html  (+3 more)
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: authes-fixture.json  orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_archived_product_created_at_product_discount_and_more.py  0003_order.py  0004_order_user.py  0005_order_products.py  0006_alter_product_options_product_created_by.py  0007_order_receipt.py  0008_product_preview.py  0009_productimage.py  0010_alter_order_options_alter_product_options_and_more.py
(+25 files in other folders)
